Agrego slides para evaluacion experimental, mejoras sobre greedy

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -53,7 +53,7 @@
 
 \begin{document}
 \title{Optimización de viajes compartidos en taxis utilizando algoritmos evolutivos}
-\author[G. Fagúndez de los Reyes \and R. Massobrio]{Gabriel Fagúndez de los Reyes \and Renzo Massobrio} 
+\author[G. Fagúndez \and R. Massobrio]{Gabriel Fagúndez de los Reyes \and Renzo Massobrio} 
 \institute[]{Facultad de Ingeniería,\\
 Universidad de la República,\\
 Montevideo, Uruguay}
@@ -417,7 +417,7 @@ Montevideo, Uruguay}
 
 \frame{
 	\frametitle{Evaluación experimental}
-
+	
 }
 
 \frame{
@@ -426,18 +426,20 @@ Montevideo, Uruguay}
 }
 
 \frame{
-	\frametitle{Evaluación experimental}
-
+	\frametitle{Comparativa de métodos de inicialización}
+	% Falta completar
 }
 
 \frame{
-	\frametitle{Evaluación experimental}
-
+	\frametitle{Mejora \textit{seqEA} sobre algoritmo ávido}
+	Se alcanzaron mejores valores en \textbf{todas} las instancias. En el mejor caso se superó el costo en un \alert{35.9\%}.
+	\input{./evaluacion_experimental/mejoras_greedy_clei/imagenes.tex}
 }
 
 \frame{
-	\frametitle{Evaluación experimental}
-
+	\frametitle{Mejora \textit{p$\mu$EA} sobre algoritmo ávido}
+	Se alcanzaron mejores valores en \textbf{todas} las instancias. En el mejor caso se superó el costo en un \alert{41\%}.
+	\input{./evaluacion_experimental/mejoras_greedy_alio/imagenes.tex}
 }
 
 \frame{
