--- a/presentacion.tex
+++ b/presentacion.tex
@@ -19,9 +19,11 @@
 %\usetheme{PaloAlto}
 
 \usepackage{graphicx}
+\usepackage{adjustbox}
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 \usepackage{url}
+\usepackage{multirow}
 %\usepackage{beamerthemeshadow}
 \usepackage{caption}
 
@@ -432,18 +434,22 @@ Montevideo, Uruguay}
 
 \frame{
 	\frametitle{Mejora \textit{seqEA} sobre algoritmo ávido}
-	Se alcanzaron mejores valores en \textbf{todas} las instancias. En el mejor caso se superó el costo en un \alert{35.9\%}.
+	Se alcanzaron mejores valores en \textbf{todas} las instancias. En el mejor caso se superó el costo del algoritmo ávido en un \alert{35.9\%}.
 	\input{./evaluacion_experimental/mejoras_greedy_clei/imagenes.tex}
 }
 
 \frame{
 	\frametitle{Mejora \textit{p$\mu$EA} sobre algoritmo ávido}
-	Se alcanzaron mejores valores en \textbf{todas} las instancias. En el mejor caso se superó el costo en un \alert{41\%}.
+	Se alcanzaron mejores valores en \textbf{todas} las instancias. En el mejor caso se superó el costo del algoritmo ávido en un \alert{41\%}.
 	\input{./evaluacion_experimental/mejoras_greedy_alio/imagenes.tex}
 }
 
 \frame{
-	\frametitle{Evaluación experimental}
+	\frametitle{Comparativa \textit{seqEA} vs. \textit{p$\mu$EA}}
+	Sobre un total de 22 instancias, \textit{p$\mu$EA} es capaz de encontrar mejores resultados que \textit{seqEA} en \alert{17}. Únicamente en una instancia de prueba \textit{seqEA} alcanzó mejores soluciones que \textit{p$\mu$EA}.
+	
+	\vspace{0.3cm}
+	%\input{./evaluacion_experimental/comparativa_clei_alio.tex}
 
 }
 
