Agrego tabla de seqEA vs puEA

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -448,8 +448,8 @@ Montevideo, Uruguay}
 	\frametitle{Comparativa \textit{seqEA} vs. \textit{p$\mu$EA}}
 	Sobre un total de 22 instancias, \textit{p$\mu$EA} es capaz de encontrar mejores resultados que \textit{seqEA} en \alert{17}. Únicamente en una instancia de prueba \textit{seqEA} alcanzó mejores soluciones que \textit{p$\mu$EA}.
 	
-	\vspace{0.3cm}
-	%\input{./evaluacion_experimental/comparativa_clei_alio.tex}
+	\vspace{0.15cm}
+	\input{./evaluacion_experimental/comparativa_clei_alio.tex}
 
 }
 
