--- a/evaluacion_experimental/comparativa_clei_alio.tex
+++ b/evaluacion_experimental/comparativa_clei_alio.tex
@@ -1,6 +1,7 @@
 \centering
-\begin{adjustbox}{max width=0.7\textwidth}
+\begin{adjustbox}{max width=0.6\textwidth}
 \begin{table}
+\begin{tabular}{ccrrrrr}
 \multicolumn {2}  {c} {\multirow{2}{*}{\textit{instancia}}}  & \multicolumn {2}  {c} {\textit{seqEA}} &\multicolumn {2}  {c}{\textit{p$\mu$EA}} &\multirow {2}  {*}{\textit{pvK--W}}\\
 	   & 	&\multicolumn {1}  {c}{$min(c)$}	& \multicolumn {1}  {c}{$\overline{c}\pm std$}	& \multicolumn {1}  {c}{$min(c)$} &\multicolumn {1}  {c}{$\overline{c}\pm std$}	& \\
 \midrule
@@ -29,5 +30,6 @@
                                 		& \#2            	& 319.3 				& 331.2$\pm$3.8                 		& 324.9 & \alert{328.6}$\alert{\pm}$\alert{3.2}        & 5.6$\times 10^{-6}$   \\
                                 		& \#3             	& 266.7 				& 269.1$\pm$2.3                 		& 266.7 & \alert{266.7}$\alert{\pm}$\alert{0.0}        & 3.1$\times 10^{-7}$   \\
                                 		& \#4             	& 303.2 				& 304.7$\pm$0.5                 		& 304.1 & 304.5$\pm$0.4         & 0.1       \\\bottomrule
+\end{tabular}
 \end{table}
 \end{adjustbox}
