Agrego error de compilacion latex

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -24,6 +24,7 @@
 \usepackage[spanish]{babel}
 \usepackage{url}
 \usepackage{multirow}
+\usepackage{booktabs}
 %\usepackage{beamerthemeshadow}
 \usepackage{caption}
 
@@ -449,6 +450,7 @@ Montevideo, Uruguay}
 	Sobre un total de 22 instancias, \textit{p$\mu$EA} es capaz de encontrar mejores resultados que \textit{seqEA} en \alert{17}. Únicamente en una instancia de prueba \textit{seqEA} alcanzó mejores soluciones que \textit{p$\mu$EA}.
 	
 	\vspace{0.15cm}
+	
 	\input{./evaluacion_experimental/comparativa_clei_alio.tex}
 
 }
