--- a/presentacion.tex
+++ b/presentacion.tex
@@ -219,7 +219,7 @@ Montevideo, Uruguay}
 	\begin{block}{Taxi pooling problem (TPP)}
 	Tao et al. (2007) Heurísticas ávidas para \textbf{one--to--many} y many--to--one. \\ \hspace{1cm}{\small Las mejoras se reportan en términos absolutos.}
 
-	Ma et al. (2013) TPP dinámico con pedidos en tiempo real. 13\% de ahorro en distancia con un algoritmo ávido en \textbf{instancias realistas}.\pause
+	Ma et al. (2013) TPP dinámico con pedidos en tiempo real.\\ \hspace{1cm}{\small 13\% de ahorro en distancia con un algoritmo ávido en \textbf{instancias realistas}.}\pause
 	\end{block}
 	\pause
 	\begin{block}{Resumen}
