arreglo error de alineacion en RW

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -212,15 +212,15 @@ Montevideo, Uruguay}
 	\end{block}
 	\pause
 	\begin{block}{Dial--a--ride problem (DARP)}
-	Cordeau et al. (2003) \textbf{DARP estático con ventanas de tiempo}. \\\hspace{1cm} {\small Búsqueda tabú con tiempos de ejecución de hasta 90 minutos.}
+	Cordeau et al. (2003) \textbf{DARP estático con ventanas de tiempo}. \\\hspace{.8cm} {\small Búsqueda tabú con tiempos de ejecución de hasta 90 minutos.}
 	\end{block}
 
 
 	\pause
 	\begin{block}{Taxi pooling problem (TPP)}
-	Tao et al. (2007) Heurísticas ávidas para \textbf{one--to--many} y many--to--one. \\ \hspace{1cm}{\small Las mejoras se reportan en términos absolutos.}
+	Tao et al. (2007) Heurísticas ávidas para \textbf{one--to--many} y many--to--one. \\ \hspace{.8cm}{\small Las mejoras se reportan en términos absolutos.}
 
-	Ma et al. (2013) TPP dinámico con pedidos en tiempo real.\\ \hspace{1cm}{\small 13\% de ahorro en distancia con un algoritmo ávido en \textbf{instancias realistas}.}\pause
+	Ma et al. (2013) TPP dinámico con pedidos en tiempo real.\\ \hspace{.8cm}{\small 13\% de ahorro en distancia con un algoritmo ávido en \textbf{instancias realistas}.}\pause
 	\end{block}
 	\pause
 	\begin{block}{Resumen}
